[gd_scene load_steps=11 format=3 uid="uid://0dix2uecrfmi"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_g0d06"]
[ext_resource type="Texture2D" uid="uid://lv0ycpbgv11" path="res://Textures/Enemy/kolbold_weak.png" id="2_tcrir"]
[ext_resource type="PackedScene" uid="uid://bhfblyadw3s6q" path="res://Utility/hurt_box.tscn" id="3_k3m6r"]
[ext_resource type="PackedScene" uid="uid://fhho6ecnkp82" path="res://Utility/hit_box.tscn" id="4_txfin"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lqxse"]
radius = 8.0
height = 22.0

[sub_resource type="Animation" id="Animation_an80x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0p2dl"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6rfvh"]
_data = {
"RESET": SubResource("Animation_an80x"),
"walk": SubResource("Animation_0p2dl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d625a"]
size = Vector2(20, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bk1v"]
size = Vector2(18, 22)

[node name="enemy_kolbold_weak" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_g0d06")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tcrir")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CapsuleShape2D_lqxse")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6rfvh")
}

[node name="HurtBox" parent="." instance=ExtResource("3_k3m6r")]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_d625a")

[node name="HitBox" parent="." instance=ExtResource("4_txfin")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(1, 4)
shape = SubResource("RectangleShape2D_7bk1v")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
